--- a/manifest.json
+++ b/manifest.json
@@ -10,11 +10,11 @@
 	"content_scripts": [
 		{
 			"matches": ["*://*/*"],
-			"js": ["manav.js"]
+			"js": ["src/manav.js"]
 		}
 	],
 	"background": {
-		"scripts": ["background.js"]
+		"scripts": ["src/background.js"]
 	},
 	"permissions": ["tabs", "storage"]
 }
