--- a/manifest.json
+++ b/manifest.json
@@ -1,16 +1,16 @@
 {
 	"manifest_version": 3,
-	"name": "MANav",
-	"version": "0.1.0",
-	"description": "MANav aka Manga Alternative Navigation is a FF Extension that adds Prev/Next Page Navigation mapped to Arrow Keys for Sites that dont provide this feature natively.",
+	"name": "MangaNav",
+	"version": "1.0.0",
+	"description": "MangaNav is a Browser Extension that adds Previous/Next Page Navigation mapped to Left/Right Arrow Keys for Manga Sites that do not provide this Feature natively.",
 	"action": {
-		"default_title": "MANav",
-		"default_icon": "src/icons/manav-off.svg"
+		"default_title": "MangaNav",
+		"default_icon": "src/icons/MangaNavAdd.png"
 	},
 	"content_scripts": [
 		{
 			"matches": ["*://*/*"],
-			"js": ["src/manav.js"]
+			"js": ["src/manganav.js"]
 		}
 	],
 	"background": {
@@ -19,7 +19,10 @@
 	"permissions": ["tabs", "storage"],
 	"browser_specific_settings": {
 		"gecko": {
-			"id": "manav.m-grohs@github.com"
+			"id": "MangaNav@m-grohs",
+			"data_collection_permissions": {
+				"required": ["none"]
+			}
 		}
 	}
 }
